syntax = "proto3";

package healthcheck.v1;
option go_package = "github.com/iakrevetkho/archaeopteryx;healthcheck";

service HealthCheckService {
  rpc Check(CheckRequest) returns (CheckResponse);

  rpc Watch(WatchRequest) returns (stream WatchResponse);
}

message CheckRequest {
  string service = 1;
}

message CheckResponse {
  HealthCheckResponse status = 1;
}

message WatchRequest {
  string service = 1;
}

message WatchResponse {
  HealthCheckResponse status = 1;
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    SERVING_STATUS_UNKNOWN_UNSPECIFIED = 0;
    SERVING_STATUS_SERVING = 1;
    SERVING_STATUS_NOT_SERVING = 2;
    SERVING_STATUS_SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
  string details = 2;
}
